@@ -7,11 +7,16 @@
 * Verbose logging can now be suppressed with the quiet flag
   (https://github.com/csmith/goplum/issues/29[#29])
 * GoPlum now exposes a gRPC API to allow for custom tooling
-  and integration with other services
+  and integration with other services.
+  See the link:docs/api.adoc[API docs] for further information.
   (https://github.com/csmith/goplum/issues/30[#30])
 * Checks can now be suspended and resumed (via the API), for
   e.g. planned maintenance
   (https://github.com/csmith/goplum/issues/31[#31])
+* Added `plumctl` command line tool that uses the API to
+  interact with a GoPlum instance.
+  See the link:docs/plumctl.adoc[plumctl docs] for further
+  information.
 
 === Changes
 
